# github-release-stats-cli

./: Cargo.toml  README.md
dotnet/: Program.cs
src/: main.rs
