[package]
name = "github-release-stats-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "ghrs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.60"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
